# server/routes.go
@@ -9,4 +9,5 @@ import (
 
 func (s *Server) RegisterRoutes(e *echo.Echo) {
 	e.POST("/users", s.RegisterAccount)
+	e.POST("/auth/login", s.LoginAccount)
 }
