# server/users.go
@@ -7,6 +7,7 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/labstack/echo/v4"
 	"golang.org/x/crypto/bcrypt"
 )
@@ -37,33 +38,30 @@ type UserCredentials struct {
 //	@Produce		json
 //	@Param			payload	body		UserCredentials	true	"Register Account"
 //	@Success		201		{object}	User
-//	@Failure		400		{object}	ErrorReason	"Unallowed credentials"
+//	@Failure		400		{object}	ErrorReason	"Invalid credentials"
 //	@Failure		409		{object}	ErrorReason	"Username already exists"
 //	@Failure		500		{object}	ErrorReason
 //	@Router			/users [post]
 func (s Server) RegisterAccount(c echo.Context) error {
 	var req UserCredentials
 	if err := c.Bind(&req); err != nil {
-		return c.JSON(http.StatusBadRequest, Reason("Json body contains syntax error"))
+		return c.JSON(http.StatusBadRequest, REASON_JSON_SYNTAX_ERROR)
 	}
-	// validate username
-	if err := ValidateUsername(req.Username); err != nil {
+	// validate username and password
+	if err := ValidateUsernameAndPassword(req.Username, req.Password); err != nil {
 		return c.JSON(http.StatusBadRequest, Reason(err.Error()))
 	}
-	// validate password
-	if err := ValidatePassword(req.Password); err != nil {
-		return c.JSON(http.StatusBadRequest, Reason(err.Error()))
-	}
+
 	// check if username already exists
-	user, err := s.DB.GetUserByUsername(c.Request().Context(), req.Username)
+	user, _ := s.DB.GetUserByUsername(c.Request().Context(), req.Username)
 	if user.Username != "" {
-		return c.JSON(http.StatusConflict, Reason("Username already taken"))
+		return c.JSON(http.StatusConflict, Reason("Username already exists"))
 	}
 	// generate password hash
 	passwordHash, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
 	if err != nil {
 		slog.Error("Failed to hash password", "password", req.Password, "error", err)
-		return c.JSON(http.StatusInternalServerError, Reason("internal server error"))
+		return c.JSON(http.StatusInternalServerError, REASON_INTERNAL_ERROR)
 	}
 	// create user in the database
 	user, err = s.DB.CreateUser(c.Request().Context(), db.CreateUserParams{
@@ -72,16 +70,73 @@ func (s Server) RegisterAccount(c echo.Context) error {
 	})
 	if err != nil {
 		slog.Error("failed to create user, guard statements should stop this", "error", err)
-		return c.JSON(http.StatusInternalServerError, Reason("internal server error"))
+		return c.JSON(http.StatusInternalServerError, REASON_INTERNAL_ERROR)
 	}
 
-	return c.JSON(http.StatusCreated, User{
-		Username:  user.Username,
-		UserID:    user.Uid,
-		CreatedAt: user.CreatedAt,
-	})
+	return c.JSON(http.StatusCreated, UserFromDbUser(user))
 }
 
+// JwtClaims defines custom JWT claims along with registered claims.
+type JwtClaims struct {
+	User
+	jwt.RegisteredClaims
+}
+type JwtResponse struct {
+	JWT string `json:"jwt" example:"xxxx.yyyy.zzzz"`
+}
+
+// LoginAccount accepts username and password, and returns a JWT
+//
+//	@Summary		Log into an account and get a JWT
+//	@Description	Log into an account using provided username and password. And get a JWT
+//	@Description	Username can be between 3-20 characters.
+//	@Description	Password must be at least 3 characters.
+//
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		UserCredentials	true	"Login Account"
+//	@Success		201		{object}	JwtResponse
+//	@Failure		401		{object}	ErrorReason	"Invalid username/password"
+//	@Failure		500		{object}	ErrorReason
+//	@Router			/auth/login [post]
 func (s Server) LoginAccount(c echo.Context) error {
-	return nil
+	var req UserCredentials
+
+	if err := c.Bind(&req); err != nil {
+		return c.JSON(http.StatusBadRequest, REASON_JSON_SYNTAX_ERROR)
+	}
+
+	// validate username and password
+	if err := ValidateUsernameAndPassword(req.Username, req.Password); err != nil {
+		return c.JSON(http.StatusBadRequest, Reason(err.Error()))
+	}
+
+	// get user
+	user, err := s.DB.GetUserByUsername(c.Request().Context(), req.Username)
+	if err != nil {
+		return c.JSON(http.StatusUnauthorized, REASON_INVALID_CREDENTIALS)
+	}
+	// validate password
+	if err := bcrypt.CompareHashAndPassword([]byte(user.PasswordHash), []byte(req.Password)); err != nil {
+		return c.JSON(http.StatusUnauthorized, REASON_INVALID_CREDENTIALS)
+	}
+	// create jwt that expires in 1 day
+	claims := JwtClaims{
+		User: UserFromDbUser(user),
+		RegisteredClaims: jwt.RegisteredClaims{
+			ExpiresAt: jwt.NewNumericDate(time.Now().Add(time.Hour * 24)),
+			IssuedAt:  jwt.NewNumericDate(time.Now()),
+		},
+	}
+
+	// create jwt
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+	finalJwt, err := token.SignedString(s.JwtSecret)
+	if err != nil {
+		slog.Error("Failed to sign jwt", "error", err)
+		return c.JSON(http.StatusInternalServerError, REASON_INTERNAL_ERROR)
+	}
+
+	return c.JSON(http.StatusOK, JwtResponse{JWT: finalJwt})
 }
